Fix second row element jumping issue

--- a/src/app/components/clue/clue.module.css
+++ b/src/app/components/clue/clue.module.css
@@ -32,7 +32,7 @@
   padding: 6px;
   padding-bottom: 8px;
   padding-top: 5px;
-  margin-top: 5px;
+  margin-top: 3px;
   border-radius: 5px;
   height: 157px;
   font-family: var(--font-geo);
