--- a/src/app/components/habitat-map/habitat-map.module.css
+++ b/src/app/components/habitat-map/habitat-map.module.css
@@ -7,6 +7,7 @@
   justify-content: center;
   border-radius: 3px;
   margin: 2px;
+  margin-top: 4px;
   position: relative;
 }
 
@@ -14,6 +15,7 @@
   .mapContainer{
     width: var(--mobile-element-width);
     height: 236px;
+    margin: auto;
   }
   .habitatImage {
     width: 351px;
