--- a/src/app/components/on-screen-keyboard/on-screen-keyboard.module.css
+++ b/src/app/components/on-screen-keyboard/on-screen-keyboard.module.css
@@ -73,7 +73,7 @@
   }
   
   .key {
-    width: 29px;
+    width: 30px;
     height: 32px;
     font-size: 14px;
     border-radius: 4px;
